# daqopen-oxygen-plugin

./: .gitignore  AddChannel.qml  CMakeLists.txt  README.md  daqopen-oxygen-plugin.cpp
